[tool.poetry]
name = "pw51"
version = "0.1.0"
description = ""
authors = ["STsapko <stsapko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
websockets = "^11.0.3"
aiofile = "^3.8.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
